观察者模式

--- a/行为型模式/Observer/pom.xml
+++ b/行为型模式/Observer/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>观察者模式</artifactId>
+    <artifactId>Observer</artifactId>
 
 
 </project>
