--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>创建型模式/Factory</module>
         <module>创建型模式/AbstractFactory</module>
         <module>行为型模式/Observer</module>
+        <module>创建型模式/Singleton</module>
     </modules>
 
     <properties>
