--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>创建型模式/Prototype</module>
         <module>行为型模式/Observer</module>
         <module>行为型模式/ChainOfResponsibility</module>
+        <module>行为型模式/Command</module>
     </modules>
 
 
